scenarios/01-simple/http-shared-port/32-backend-b-httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-b-route
  namespace: backend-b
  labels:
    app.kubernetes.io/part-of: demo
spec:
  parentRefs:
    - name: http-shared-port-gateway
      namespace: gateway-system
      sectionName: http-b
  hostnames:
    - api-b.example.test
  rules:
    - backendRefs:
        - name: api
          port: 80
